src/objects/Apttus_Config2__LineItem__c/fields/Account_SBU__c.field-meta.xml
<CustomField>
    <fullName>Account_SBU__c</fullName>
    <formula>TEXT(Apttus_Config2__ConfigurationId__r.Apttus_Config2__AccountId__r.Strategic_Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SBU</label>
    <type>Text</type>
</CustomField>