src/objects/Apttus_Config2__LineItem__c/fields/APTS_CallbackApply__c.field-meta.xml
<CustomField>
    <fullName>APTS_CallbackApply__c</fullName>
    <formula>TEXT(Apttus_Config2__ProductId__r.APTS_CallbackApply__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CallbackApply</label>
    <type>Text</type>
</CustomField>