src/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__ClassificationHierarchy__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ClassificationHierarchy__c</fullName>
    <description>The category hierarchy</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Category Hierarchy</label>
    <type>TextArea</type>
</CustomField>