src/objects/Apttus_Config2__LineItem__c/fields/CPQ_Customer_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Customer_Item_Code__c</fullName>
    <description>Reference to Customer Item Code. Populated via PCB from custom object</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reference to Customer Item Code. Populated via PCB from custom object</inlineHelpText>
    <label>Customer Item Code</label>
    <length>75</length>
    <type>Text</type>
</CustomField>