src/objects/Apttus_Config2__LineItem__c/fields/CPQ_Equipment__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Equipment__c</fullName>
    <description>Reference to Equipment for verizon. Populated via PCB from product record</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reference to Equipment for verizon. Populated via PCB from product record</inlineHelpText>
    <label>Equipment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>