src/objects/Apttus_Config2__LineItem__c/fields/CPQ_Net_Price_Inc_Trans__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Net_Price_Inc_Trans__c</fullName>
    <description>Calculated as Net Price + Transport Price</description>
    <formula>IF(TEXT(Apttus_Config2__LineType__c) = &apos;Option&apos; , null, IF(CPQ_Price_Class__c = &apos;Transportation&apos;,Apttus_Config2__BasePriceOverride__c, Apttus_Config2__NetPrice__c + CPQ_Transport_Price__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as Net Price + Transport Price</inlineHelpText>
    <label>Net Price (Incl Transport)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>