src/objects/Apttus_Config2__LineItem__c/fields/CPQ_Product_Accreditation_Discount__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Product_Accreditation_Discount__c</fullName>
    <description>Stores the total discount applicable from product accreditation</description>
    <label>Total Product Discount</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>