src/objects/Apttus_Config2__LineItem__c/fields/CPQ_SSF_Billing_Rule_Code__c.field-meta.xml
<CustomField>
    <fullName>CPQ_SSF_Billing_Rule_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SSF Billing Rule Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>