src/objects/Apttus_Config2__LineItem__c/fields/CPQ_SSF_Discounted_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ_SSF_Discounted_Base_Price__c</fullName>
    <description>Reference to the tss_discUnitRate (recurring) or disconetimecharge (onetime) from the SSF BOM upload for Surround</description>
    <inlineHelpText>Reference to the tss_discUnitRate (recurring) or disconetimecharge (onetime) from the SSF BOM upload for Surround</inlineHelpText>
    <label>SSF Discounted Base Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>