src/objects/Apttus_Config2__LineItem__c/fields/CPQ_SSF_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CPQ_SSF_Product_Name__c</fullName>
    <description>Reference to the tss_productname from the SSF BOM upload for Surround</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reference to the tss_productname from the SSF BOM upload for Surround</inlineHelpText>
    <label>SSF Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>