src/objects/Apttus_Config2__LineItem__c/fields/Nokia_SRS_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Nokia_SRS_List_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Nokia SRS List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>