src/objects/Apttus_Config2__LineItem__c/fields/NokiaCPQ_CustomProductPDC__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_CustomProductPDC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CustomProductPDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>