src/objects/Apttus_Config2__LineItem__c/fields/NokiaCPQ_Extended_CLP__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Extended_CLP__c</fullName>
    <formula>IF(CPQ_IsCQ__c, IF(TEXT(Apttus_Config2__LineType__c)!=&apos;Option&apos;, Apttus_Config2__NetPrice__c, null), NokiaCPQ_Partner_Price__c  *  NokiaCPQ_Quantity_Int__c)</formula>
    <label>Extended CLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>