src/objects/Apttus_Config2__LineItem__c/fields/NokiaCPQ_ExtendedPrice_CUP__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_ExtendedPrice_CUP__c</fullName>
    <formula>IF(AND( Portfolio_from_Quote_Line_Item__c = &apos;Airscale Wifi&apos;, Contains(NokiaCPQ_Configuration_Type__c,&apos;Standalone&apos;),  ISPICKVAL(Apttus_Config2__LineType__c, &apos;Option&apos;  ) ),IF(AND(!ISNULL(Apttus_Config2__ExtendedQuantity__c),Apttus_Config2__ExtendedQuantity__c!= 0),((Apttus_Config2__AdjustedPrice__c/Apttus_Config2__ExtendedQuantity__c)* Apttus_Config2__Quantity__c),Apttus_Config2__AdjustedPrice__c ),IF( (Contains(NokiaCPQ_Configuration_Type__c,&apos;Bundle&apos;)),If(TEXT(Apttus_Config2__LineType__c) = &apos;Product/Service&apos;,NokiaCPQ_Extended_CUP__c* ROUND(Apttus_Config2__Quantity__c,2),NokiaCPQ_Extended_CUP__c),Apttus_Config2__AdjustedPrice__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended CUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>