src/objects/Apttus_Config2__LineItem__c/fields/NokiaCPQ_Maint_Yr2_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Maint_Yr2_Base_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>NokiaCPQ Maint Yr2 Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>