src/objects/Apttus_Config2__LineItem__c/fields/NokiaCPQ_Maximum_IRP_Discount__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Maximum_IRP_Discount__c</fullName>
    <formula>Apttus_Config2__OptionId__r.NokiaCPQ_Maximum_IRP_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum IRP Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>