src/objects/Apttus_Config2__LineItem__c/fields/NokiaCPQ_MN_OEM_Condition__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_MN_OEM_Condition__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MN OEM Condition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>