src/objects/Apttus_Config2__LineItem__c/fields/NokiaCPQ_Product_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Product_Item_Status__c</fullName>
    <formula>IF(ISPICKVAL(Apttus_Config2__LineType__c , &apos;Product/Service&apos;) , IF(ISPICKVAL(Apttus_Config2__ProductId__r.NokiaCPQ_State__c, &apos;Implement&apos;), &apos;Approval required&apos;, IF(ISPICKVAL(Apttus_Config2__ProductId__r.NokiaCPQ_State__c, &apos;Ramp Up&apos;),&apos;Approval required&apos;, IF(ISPICKVAL(Apttus_Config2__ProductId__r.NokiaCPQ_State__c, &apos;Ramp Down&apos;), &apos;Approval required&apos;, &apos;&apos;))), 
IF(ISPICKVAL(Apttus_Config2__OptionId__r.NokiaCPQ_State__c , &apos;Implement&apos;), &apos;Approval required&apos;, IF(ISPICKVAL(Apttus_Config2__OptionId__r.NokiaCPQ_State__c, &apos;Ramp Up&apos;),&apos;Approval required&apos;, IF(ISPICKVAL(Apttus_Config2__OptionId__r.NokiaCPQ_State__c, &apos;Ramp Down&apos;), &apos;Approval required&apos;, &apos;&apos;)))
)</formula>
    <label>Product Item Status</label>
    <type>Text</type>
</CustomField>