src/objects/Apttus_Config2__LineItem__c/fields/NokiaCPQ_Status__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Status__c</fullName>
    <formula>TEXT(Apttus_Config2__ConfigurationId__r.Apttus_Config2__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>