src/objects/Apttus_Config2__LineItem__c/fields/NokiaCPQ_Unitary_IRPrice__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Unitary_IRPrice__c</fullName>
    <formula>IF(AND( Quote_Type__c =&apos;Direct CPQ&apos;,  Portfolio_from_Quote_Line_Item__c = &apos;Airscale Wifi&apos; ),NokiaCPQ_Unitary_IRP__c,
If(Text(Apttus_Config2__ChargeType__c )=&apos;Standard Price&apos;,NokiaCPQ_Unitary_IRP__c, NokiaCPQ_Partner_Price__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unitary IRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>